fix tool alignment, correct fill toggle color to match other tools

--- a/css/style.css
+++ b/css/style.css
@@ -79,8 +79,9 @@ section {
 }
 
 .toggle :where(span, label) {
-    color: grey;
-    padding-left: 10px;
+    color: var(--dark-gray);
+    align-items: flex-start;
+
 }
 
 .tool-choice:hover {
